<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">人人地推</string>
    <string name="can_receive_task">可接任务</string>
    <string name="action_settings">Settings</string>
    <string name="nogoing">已领取(0)</string>
    <string name="ongoing">审核中(0)</string>
    <string name="finished">未通过(0)</string>
    <string name="through">审核通过</string>
    <string name="invalid">过期失效</string>
    <string name="cancelled">已取消</string>
    <string name="networknotconnect">网络无连接</string>
    <string name="serviceErr">网络错误！</string>
    <string name="serviceExp">网络异常！</string>
    <string name="refresh">刷新</string>
    <string name="taskcontent">任务详情</string>
    <string name="personalcenter">个人中心</string>
    <string name="contractSubmission">提交审核</string>
    <string name="setting">设置</string>
    <string name="systemSetting">系统设置</string>
    <string name="myTask">我的任务</string>
    <string name="aboutme">关于我们</string>
    <string name="helpCenter">帮助中心</string>
    <string name="personaldata">个人资料</string>
    <string name="versionUpdate">当前版本</string>
    <string name="cache">清除缓存</string>
    <string name="withdrawals">提现</string>
    <string name="trueWithdrawals">确认提现</string>
    <string name="canWithdrawals">可提现</string>
    <string name="canWithdrawalsMoney">可提现金额</string>
    <string name="audit">审核中</string>
    <string name="myMoney">我的余额</string>
    <string name="withdrawalsing">提现中</string>
    <string name="tips">友情提示</string>
    <string name="tips_content">1.为确保转账成功，请保证您的支付宝账户信息真实、有效；\n2.申请提现后，我们将会以最快的速度转账，请您耐心等待！</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="alipay_name">支付宝姓名</string>
    <string name="balance">提现金额</string>
    <string name="updatePassword">修改密码</string>
    <string name="signOut">退出登录</string>
    <string name="password">密码</string>
    <string name="oldPassword">旧密码</string>
    <string name="newPassword">新密码</string>
    <string name="againPassword">确认密码</string>
    <string name="login">登录</string>
    <string name="more">更多</string>
    <string name="register">注册</string>
    <string name="userIcon">头像</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="phone">手机</string>
    <string name="phoneNum">手机号码</string>
    <string name="code">短信验证码</string>
    <string name="writeCode">输入验证码</string>
    <string name="confirm">确认</string>
    <string name="matters_need_attention">注意事项</string>
    <string name="task_description">任务流程</string>
    <string name="company_profile">公司介绍</string>
    <string name="receive_task">领取任务</string>
    <string name="finished_task">已完成任务</string>
    <string name="giveup_task">放弃任务</string>
    <string name="submit_data">提交审核</string>
    <string name="save">保存</string>
    <string name="camera">拍照</string>
    <string name="album">从相册中选择</string>
    <string name="give_up">取消</string>
    <string name="download_title" formatted="false">发现最新版本(%s)</string>
    <string name="progressbar_dialog_txt">正在处理，请稍后...</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

</resources>