<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <RelativeLayout style="@style/activity_headlayout" >

        <LinearLayout style="@style/activity_headlayout_left" >

            <include layout="@layout/layout_back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            style="@style/activity_headlayout_center_centertext"
            android:layout_marginLeft="@dimen/_45dp"
            android:text="@string/more" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/rl_updatePassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/textview_button_selector" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/updatePassword"
            android:textColor="#333333"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/go" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#cccccc" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/rl_version_update"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/textview_button_selector" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/versionUpdate"
            android:textColor="#333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:textColor="#888888"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#cccccc" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/rl_cache"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/textview_button_selector" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/cache"
            android:textColor="#333333"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#cccccc" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_12dp"
        android:layout_marginRight="@dimen/_12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_blue_wane_bg"
        android:text="@string/signOut"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</LinearLayout>